--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #============
 #= DATASOURCE
 #============
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://dpg-cigit4tgkuvojj9hgtq0-a.oregon-postgres.render.com/database_nl43
 spring.datasource.username=database_nl43_user
