--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,18 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://dpg-cigit4tgkuvojj9hgtq0-a.oregon-postgres.render.com/database_nl43
 spring.datasource.username=database_nl43_user
 spring.datasource.password=94373N5VZV8mV7J5xNcQnIIYQQ1AsJiT
+#============
+#= THYMELEAF CONFIGURATIONS
+#============
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+#============
+#= MESSAGES CONFIGUATION
+#============
+spring.messages.basename=messages/messages
+spring.messages.encoding=ISO-8859-1
