--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@
 #============
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://dpg-cigit4tgkuvojj9hgtq0-a.oregon-postgres.render.com/database_nl43
-spring.datasource.username=database_nl43_user
-spring.datasource.password=94373N5VZV8mV7J5xNcQnIIYQQ1AsJiT
+spring.datasource.url=jdbc:postgresql://localhost:5432/siwmovie
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://dpg-cigit4tgkuvojj9hgtq0-a.oregon-postgres.render.com/database_nl43
+#spring.datasource.username=database_nl43_user
+#spring.datasource.password=94373N5VZV8mV7J5xNcQnIIYQQ1AsJiT
 #============
 #= THYMELEAF CONFIGURATIONS
 #============
