--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 #============
 #= DATASOURCE
 #============
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/siwmovie
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #============
 #= THYMELEAF CONFIGURATIONS
 #============
